@@ -44,3 +44,4 @@
 - rework cia interrupt and step logic
 - rework c64 frame execution logic
 - rework c64 reset logic
+- revamp cpu instruction tracing
